--- a/MiDocOnline/app/src/main/res/values/strings.xml
+++ b/MiDocOnline/app/src/main/res/values/strings.xml
@@ -46,5 +46,9 @@
         <item>ST</item>
     </array>
 
+    <string name="logout_confirm_msg">Do you really want to logout ?</string>
+    <string name="text_yes">Yes</string>
+    <string name="text_no">No</string>
+
 
 </resources>
